feat: first commit(블로그 기초 틀)

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
-.App {
+  .App {
   text-align: center;
+}
+.black-nav{
+  display:flex;
+  background:#000;
+  width:100%;
+  color:#fff;
+  padding-left:20px;
+  /* justify-content: center; */
 }
 
 .App-logo {
