feat: 컴포넌트 생성

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,9 @@ div{
   padding-top:20px;
   padding-left:20px;
 }
+.modal{
+  margin-top:20px;
+  padding:20px;
+  background:#eee;
+  text-align:left;
+}
